update save file
