# docs/swagger.json
@@ -483,9 +483,9 @@
         },
         "/amg/v1/posts/create-post": {
             "post": {
-                "description": "Creates a new post",
+                "description": "Creates a new post with title, content, and optional header image",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -496,13 +496,24 @@
                 "summary": "Create a new post",
                 "parameters": [
                     {
-                        "description": "Post data",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Post"
-                        }
+                        "type": "string",
+                        "description": "Post Title",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Post Content",
+                        "name": "content",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Header Image",
+                        "name": "headerImage",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -1233,6 +1244,9 @@
                     "type": "string"
                 },
                 "create_at": {
+                    "type": "string"
+                },
+                "header_image": {
                     "type": "string"
                 },
                 "id": {
