# models/post.go
@@ -6,12 +6,13 @@ import (
 )
 
 type Post struct {
-	ID       primitive.ObjectID `json:"id,omitempty" bson:"_id,omitempty"`
-	Title    string             `json:"title" bson:"title"`
-	Content  string             `json:"content" bson:"content"`
-	Category string             `json:"category" bson:"category"`
-	AuthorID primitive.ObjectID `json:"author_id" bson:"author_id"`
-	CreateAt time.Time          `json:"create_at" bson:"create_at"`
-	UpdateAt time.Time          `json:"update_at" bson:"update_at"`
-	Status   string             `json:"status" bson:"status"`
+	ID          primitive.ObjectID `json:"id,omitempty" bson:"_id,omitempty"`
+	Title       string             `json:"title" bson:"title"`
+	Content     string             `json:"content" bson:"content"`
+	HeaderImage string             `json:"header_image" bson:"header_image"`
+	Category    string             `json:"category" bson:"category"`
+	Author      string             `json:"author" bson:"author"`
+	CreateAt    time.Time          `json:"create_at" bson:"create_at"`
+	UpdateAt    time.Time          `json:"update_at" bson:"update_at"`
+	Status      string             `json:"status" bson:"status"`
 }
